--- a/web.xml
+++ b/web.xml
@@ -10,11 +10,30 @@
     <servlet-name>greetServlet</servlet-name>
     <servlet-class>com.server.GreetingServiceImpl</servlet-class>
   </servlet>
+  <servlet>
+    <servlet-name>Upload</servlet-name>
+    <servlet-class>com.server.UploadServlet</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>Success</servlet-name>
+    <servlet-class>com.server.SuccessServlet</servlet-class>
+  </servlet>
   
   <servlet-mapping>
     <servlet-name>greetServlet</servlet-name>
     <url-pattern>/moviemap/greet</url-pattern>
   </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>Upload</servlet-name>
+    <url-pattern>/upload</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>Success</servlet-name>
+    <url-pattern>/success</url-pattern>
+  </servlet-mapping>
+  
+  
+  
   <!-- Default page to serve -->
   <welcome-file-list>
     <welcome-file>MovieMap.html</welcome-file>
